# 4WD_ROS_SLAM_Project

./: 20190926_USB_CAM_PKG_Analysis.md  20190930_Docker_ROS.md  README.md
01_SLAM_Proto_V1_4WD_RC/hw_src/Arduino_node/vehicle/: vehicle.ino
01_SLAM_Proto_V1_4WD_RC/launch/: v1_union.launch
01_SLAM_Proto_V1_4WD_RC/msg/: DC_velocity.msg
01_SLAM_Proto_V1_4WD_RC/src/: ackermann_odom_broadcaster.cpp  lidar_node.cpp  serial_RX_vel_stamp.cpp  tf_broadcaster.cpp
02_Visual_SLAM_Proto/: README.md  bundle_adjustment_scipy.py  debug.txt  feature_detection_practice.py  g2o_BA_class.py  g2o_ba.py  main.py  main_ORBoptflow.py  optical_flow_ORB.py  visual_odometry.py  visual_odometry_02.py  visual_odometry_ORB_BF_KITTI.py  visual_odometry_ORB_BF_realsense.py  visual_odometry_ORB_OptFlow_KITTI.py  visual_odometry_ORB_optical_flow.py  visual_odometry_optical_flow.py  visual_odometry_shitomasi_optical_flow.py
03_SLAM_Challenge/: binary_sample  dataset_display.py  groundtruth_label  groundtruth_label.py
03_SLAM_Challenge/cluster_based_localization/agglomerative_clustering_ex/: main.py
03_SLAM_Challenge/cluster_based_localization/naverlabs_groundtruth_clustering/: agglomerative_clustering_main.py  classifier_nn.py  csv_test.py  datasetLoader.py  dataset_1F.csv  dataset_1F_valid.csv  dataset_B1.csv  dataset_B1_valid.csv  dataset_split.py  main.py  reduced_classifier_nn.py  train_loaded_model.py  train_main.py  valid_dataset_1F.csv  valid_dataset_B1.csv
03_SLAM_Challenge/cluster_based_localization/naverlabs_groundtruth_clustering/plot_clustering/: plot_clustering.py
03_SLAM_Challenge/keras_ex/: mnist_ex_Functional_API.py
03_SLAM_Challenge/keras_ex/ex01_functional_API/: mnist_ex_Functional_API.py
03_SLAM_Challenge/keras_ex/ex01_functional_API/path_to_my_model/: saved_model.pb
03_SLAM_Challenge/keras_ex/ex01_functional_API/path_to_my_model/variables/: variables.data-00000-of-00001  variables.index
03_SLAM_Challenge/keras_ex/ex02_mnist_Conv/: mnist_conv.py
03_SLAM_Challenge/keras_ex/ex03_content_based_image_retrieval/: image_indexer.py  search.py  train_autoencoder.py
03_SLAM_Challenge/keras_ex/ex03_content_based_image_retrieval/autoencoder/: convautoencoder.py
03_SLAM_Challenge/keras_ex/ex03_content_based_image_retrieval/output/: autoencoder.h5
03_SLAM_Challenge/keras_ex/ex03_unsupervised_image_retrieval/: autoencoder.h5  conv_autoencoder_decoder.py  image_denoising.py
03_SLAM_Challenge/keras_ex/ex03_unsupervised_image_retrieval/computed_data/: out_distances_10.npy  out_distances_100.npy  out_distances_50.npy  out_labels_10.npy  out_labels_100.npy  out_labels_50.npy  scores.npy
03_SLAM_Challenge/keras_ex/ex04_cnn_indoor_image_retrieval/: cmd.txt  color_autoencoder.py  dataset_convert.py  image_indexer.py  search.py  train_autoencoder.py
03_SLAM_Challenge/keras_ex/ex04_cnn_indoor_image_retrieval/convautoencoder/: autoencoder.py
03_SLAM_Challenge/keras_ex/ex04_cnn_indoor_image_retrieval/output/: autoencoder.h5
03_SLAM_Challenge/keras_ex/ex05_cnn_indoor_image_feature_extraction/: feature_extract_test.py
20190927_ROS_USB_CAM_Practice/: CMakeLists.txt  package.xml
20190927_ROS_USB_CAM_Practice/msg/: main_node_msg.msg
20190927_ROS_USB_CAM_Practice/nodes/: main_node.cpp
20191021_ROS_Arduino_Connect/hw_src/Arduino_node/: Arduino_node.ino
20191021_ROS_Arduino_Connect/src/: serial_RX_node.cpp
20191024_ROS_Python_Practice/scripts/: talker.py
20191029_ROS_RPLidar_Practice/src/: process_node.cpp
20191110_slam_proto_v1/: CMakeLists.txt  package.xml
20191110_slam_proto_v1/hw_src/Arduino_node/: Arduino_node.ino
20191110_slam_proto_v1/hw_src/Arduino_node/vehicle/: vehicle.ino
20191110_slam_proto_v1/launch/: v1_union.launch
20191110_slam_proto_v1/msg/: DC_Control.msg
20191110_slam_proto_v1/src/: ackermann_odom_broadcaster.cpp  cam_node.cpp  lidar_node.cpp  serial_RX_node.cpp  tf_broadcaster.cpp
Practice_Materials/20190927_ROS_USB_CAM_Practice/: package.xml
Practice_Materials/20191021_ROS_Arduino_Connect/: CMakeLists.txt  package.xml
Practice_Materials/20191021_ROS_Arduino_Connect/launch/: union.launch
Practice_Materials/20191024_ROS_Python_Practice/: CMakeLists.txt  package.xml
Practice_Materials/20191029_ROS_RPLidar_Practice/: CMakeLists.txt  package.xml
Practice_Materials/20191029_ROS_RPLidar_Practice/launch/: rplidar_union.launch
Reference Materials/: Nvidia Jetson Orbitty Setup & VNC Remote Monitor.pptx  ROS gmapping 분석 결과.pptx
Reference Materials/NVIDIA Jetson/Current Limit Issue/: Orbitty Board 전류 제한치에 의한 작동 중지 Issue 및 해결방법.txt
Reference Materials/NVIDIA Jetson/Installation Setup/: Jetson Orbitty Board Setting (JetPack 4.2.2.) (Nvidia SDK manager).txt
Reference Materials/RPLidar/: rplidar_orientation.odg
