<?xml version="1.0"?>
<package format="2">
  <name>slam_proto_v1</name>
  <version>0.1.0</version>
  <description>The slam_proto_v1 package</description>

  <maintainer email="luwis93choi@hotmail.com">luwis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <!--usb_cam package specific build requirements-->
  <build_depend>image_transport</build_depend>
  <build_depend>ffmpeg</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <!--*******************************************-->
  <!--OpenCV specific build requirement-->
  <build_depend>OpenCV</build_depend>
  <build_depend>cv_bridge</build_depend>
  <!--*******************************************-->
  <!--Transformation related build requirement-->
  <build_depend>tf</build_depend>

  <build_export_depend>rosconsole</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <!--usb_cam package specific build requirements-->
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>ffmpeg</build_export_depend>
  <build_export_depend>camera_info_manager</build_export_depend>
  <!--*******************************************-->
  <!--OpenCV specific build requirement-->
  <build_export_depend>OpenCV</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <!--*******************************************-->
  <!--Transformation related build requirement-->
  <build_export_depend>tf</build_export_depend>

  <exec_depend>rosconsole</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <!--usb_cam package specific build requirements-->
  <exec_depend>image_transport</exec_depend>
  <exec_depend>ffmpeg</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>v4l-utils</exec_depend>
  <!--*******************************************-->
  <!--OpenCV specific build requirement-->
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <!--*******************************************-->
  <!--Transformation related build requirement-->
  <exec_depend>tf</exec_depend>

  <export></export>
</package>
